# CyberLens

./: CMakeLists.txt  CyberLensprojectDocumentation.docx  LICENSE  README.md  filescanner.cpp  historymanager.cpp  historymanager.h  mainwindow.cpp  mainwindow.ui  networkchecker.h  reportgenerator.h  urlanalyzer.cpp  urlanalyzer.h
CyberLens/: README.md  mainwindow.ui
src/: filescanner.h  mainwindow.h  networkchecker.cpp  reportgenerator.cpp
